<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FateLink</string>
    <string name="rongyun_key">qf3d5gbjqzamh</string>
    <string name="email_address">FateLink.Official@outlook.com</string>
    <string name="email_address_logo">📮: FateLink.Official@outlook.com</string>
    <string name="help_tip">Contact us at FateLink.Official@outlook.com for more support, team will reply within 48 hours [Get help from FateLink]</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="dollar_sign">$</string>
    <string name="title_settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="my_account">My Account</string>
    <string name="terms">Terms</string>
    <string name="security">Security</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="login_google">Sign in with Google</string>
    <string name="login_facebook">Sign in with Facebook</string>
    <string name="login_phone">Sign in with Phone Number</string>
    <string name="user_agreement">Terms</string>
    <string name="privacy_items">PrivacyPolicy</string>
    <string name="login_protocol_top">By registering,you agree</string>
    <string name="login_protocol">By continuing, you agree to our \n Terms &amp; Privacy Policy</string>
    <string name="login_with">Login with</string>
    <string name="google_play">Google Play</string>
    <string name="delete">Delete</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_hit">Are you sure you want to delete your\naccount? \nAfter deletion, we will retain your gender and either your email or phone number for three months before permanently deleting them.</string>
    <string name="cancel">Cancel</string>
    <string name="your_nickname">Your nickname</string>
    <string name="show_your_nickname">Show your nickname</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="next">Next</string>
    <string name="select_birth_date">Select birth date</string>
    <string name="select_birth_tip">Please make sure you are over 18 yeas old.</string>
    <string name="seeking_for">I’m seeking for</string>
    <string name="female">Woman</string>
    <string name="male">Man</string>
    <string name="gender_queer">Queer</string>
    <string name="make_new_friends">Making new friends</string>
    <string name="seeking_long_term_partner">Seeking a long-term partner</string>
    <string name="looking_for_dating_partner">Looking for a dating partner</string>
    <string name="the_nickname_is_not_valid">The nickname is not valid.</string>
    <string name="select_your_photo">Select your photo</string>
    <string name="cover">Cover</string>
    <string name="albums">Albums</string>
    <string name="camera">Camera</string>
    <string name="nickname">Nickname</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="looking_for">Looking For</string>
    <string name="about_me">About me</string>
    <string name="my_interests">My interests</string>
    <string name="about_me_tips">Introduce yourself, tell people what kind of feature do you like best?</string>
    <string name="save">Save</string>
    <string name="new_save">SAVE</string>
    <string name="to_edit">To Edit</string>
    <string name="report">Report</string>
    <string name="block">Block</string>
    <string name="send">Send</string>
    <string name="wlm_empty_tip">We are working hard to find you the special ones! Please be patient, save the best for the last</string>
    <string name="wlm_white_empty_tip">The current list is empty.</string>
    <string name="nearby">Nearby</string>
    <string name="online">Online</string>
    <string name="say_something_nice">Say something nice</string>
    <string name="black_toast">Add Blacklist Successful</string>
    <string name="report_toast">Report Successful</string>
    <string name="report_one">Not my type</string>
    <string name="report_two">Fake profile! It’s a guy</string>
    <string name="report_three">Abusive behaviour or nudity</string>
    <string name="report_four">Scam</string>
    <string name="report_five">Sex services</string>
    <string name="report_six">Sale or mentions of drugs</string>
    <string name="report_seven">Underage</string>
    <string name="done">Done</string>
    <string name="interest_more_tip">You can select up to 8 at most</string>
    <string name="update_reminder">Update Reminder</string>
    <string name="update">Update</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="network_error_tip">Please check your network or try again.</string>
    <string name="try_again">Try Again</string>
    <string name="unlock_now">Unlock Now</string>
    <string name="refresh_times_after">Refresh Later</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="unsubscribe_tip">Unsubscribing takes effect immediately, and you will no longer enjoy membership benefits after this subscription period ends.</string>
    <string name="purchase_new_subscription">Purchase New Subscription</string>
    <string name="purchase_new_subscription_tips">This membership will only take effect after the previous membership period ends.</string>
    <string name="premium">Premium</string>
    <string name="purchase_now">Purchase Now</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_tip_title">You can cancel your subscription at any time.
        One-time payment.</string>
    <string name="purchase_tip_content">    The subscription fee will be charged to your Google Play account.\n
    Your subscription will automatically renew within 24 hours before the end of the current period.\n
    You can turn off auto-renewal at any time in your Google Play account settings.\n
    Once the subscription is active, refunds are not available. Please cancel the subscription before the current subscription period ends.By tapping Continue, you agree to our Privacy Policy and Terms.</string>
    <string name="premium_privilege">Premium privilege</string>
    <string name="auto_subscription">Auto-subscription</string>
    <string name="agree_to_the_payment_agreement">Agree to the Payment Agreement</string>
    <string name="payment_agreement">Payment Agreement</string>
    <string name="get_premium">Get Premium</string>
    <string name="get_special">Get special </string>
    <string name="buy_member_unitary_tips">For full details, check out our Privacy Policy and Terms.</string>
    <string name="continues">Continue</string>
    <string name="boost">Boost</string>
    <string name="private_album">Private Album</string>
    <string name="own_private_album">Own a private album</string>
    <string name="no_member_dialog_title">How Can Private Albums Protect Your Privacy?</string>
    <string name="no_member_dialog_title_one">Nobody will Find it</string>
    <string name="no_member_dialog_title_two">Nobody can Share it</string>
    <string name="no_member_dialog_content_one">Save your cheekiest photos here and never have to worry that someone will find them accidentally.</string>
    <string name="no_member_dialog_content_two">Private photos can\'t be saved, screenshotted, or forwarded by others. Once sent, they will self-destruct for 1 hour after being opened.</string>
    <string name="no_member_dialog_tips">Get yourself premium to</string>
    <string name="add_photo">Add a photo</string>
    <string name="camera_permission_title">Camera access not enabled</string>
    <string name="camera_permission_content">Unable to record videos. Go to settings</string>
    <string name="notification_permission_title">Turn on notification</string>
    <string name="notification_permission_content">You can turn notification for this application in the settings.</string>
    <string name="location_permission_title">To enable location permissions</string>
    <string name="location_permission_content">You can turn location services for this application in the settings.</string>
    <string name="photo_permission_title">Photo access not enabled</string>
    <string name="photo_permission_content">Allow permission for FateLink to access "all photos".</string>
    <string name="settings">Settings</string>
    <string name="video_too_short_tip">Please upload at least 1s</string>
    <string name="video_too_overlong_tip">Please be less than 60s</string>
    <string name="video_too_big_tip">Please be less than 50m</string>
    <string name="get_it">Get It</string>
    <string name="member_buy_success_title">Welcome to FateLink</string>
    <string name="member_buy_success_tip">You have successfully subscribed Enjoy the benefits!</string>
    <string name="first_into_wlm_tip">You Got 3  Free Chances To Like People "Who Like Me"</string>
    <string name="first_click_flash_chat_tip">You have 3 complimentary flash chat sessions. Utilize them now for immediate conversation.</string>
    <string name="unlock_private_videos_title">Private Videos</string>
    <string name="unlock_private_videos_content">You have successfully subscribed Enjoy the benefits!</string>
    <string name="unlock_private_photos_title">Private Photos</string>
    <string name="unlock_private_photos_content">You have successfully subscribed Enjoy the benefits!</string>
    <string name="flash_chat_title">Flash Chat</string>
    <string name="flash_chat_content">You have successfully subscribed Enjoy the benefits!</string>
    <string name="get_more">Get more</string>
    <string name="private_videos">Private Videos</string>
    <string name="private_photos">Private Photos</string>
    <string name="meet_more_people">Meet more people</string>
    <string name="meet_more_people_tip">Tap on a new match above to send a message.</string>
    <string name="say_hi">Say hi 😉</string>
    <string name="what_your_number">What’s your number</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_tips">We never share this with anyone and will not appear on your profile information.</string>
    <string name="phone_number_error">Phone Number Error</string>
    <string name="verify_your_number">Verify your number</string>
    <string name="verify_tip">Enter the 6-digit code you received.</string>
    <string name="resend_code">Resend Code</string>
    <string name="code_restrict_error">Failed to send code. Please use another login method.</string>
    <string name="code_expire_error">Code send failed. Please try again.</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="connect_now">Connect now</string>
    <string name="my_height">My height</string>
    <string name="height">Height</string>
    <string name="why_you_here">Why are you here</string>
    <string name="now_i_want">Now I want...</string>
    <string name="you_accept">You accept...</string>
    <string name="like_minded_sweetheart">Find a like-minded sweetheart</string>
    <string name="like_minded_sweetheart_white">Find a like-minded sweetheart</string>
    <string name="seeking_a_thrilling_fling">😈 Seeking a thrilling fling?</string>
    <string name="oldly_express_your_desires">💦 Boldly express your desires</string>
    <string name="ad">AD</string>
    <string name="turn_ons">Turn-Ons</string>
    <string name="hide_height">Hide Height</string>
    <string name="unhide_height">Unhide height</string>
    <string name="account_logout_tip">Account logged out: Logged in on another device.</string>
    <string name="ooops_network_error">Ooops！Network error.</string>
    <string name="please_select">Please select</string>
    <string name="what_went_wrong">What went wrong?</string>
</resources>