<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_118dp"
        android:src="@mipmap/icon_index_network_error" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:fontFamily="@font/intersemibold"
        android:text="@string/something_went_wrong"
        android:textColor="@color/color_202323"
        android:textSize="@dimen/dimen_20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/network_error_tip"
        android:textColor="@color/color_84868E"
        android:textSize="@dimen/dimen_16sp" />

    <LinearLayout
        android:id="@+id/network_error_try_again"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_52dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:background="@drawable/shape_solid_black_radius_18"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_52dp"
            android:gravity="center"
            android:text="@string/try_again"
            android:textColor="@color/color_001912"
            android:textSize="@dimen/dimen_16sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/network_error_loading"
            android:layout_width="@dimen/dimen_16dp"
            android:layout_height="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:visibility="gone"
            app:lottie_autoPlay="false"
            app:lottie_fileName="next_loading.json"
            app:lottie_loop="true" />
    </LinearLayout>
</LinearLayout>