<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_top_half_solid_gray_radius_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@+id/img_google"
            app:layout_constraintTop_toTopOf="@+id/img_google"
            app:layout_constraintBottom_toBottomOf="@+id/img_google"
            android:text="@string/login_with"
            android:textSize="@dimen/dimen_13sp"
            android:textColor="@color/color_9C9FA6"
            android:layout_marginEnd="@dimen/dimen_4dp"
            android:fontFamily="@font/interregular"
            />
        <ImageView
            android:id="@+id/img_google"
            android:layout_width="@dimen/dimen_16dp"
            android:layout_height="@dimen/dimen_16dp"
            android:src="@mipmap/icon_google"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/dimen_18dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/img_google"
            app:layout_constraintTop_toTopOf="@+id/img_google"
            app:layout_constraintBottom_toBottomOf="@+id/img_google"
            android:text="@string/google_play"
            android:textSize="@dimen/dimen_13sp"
            android:textColor="@color/color_9C9FA6"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:fontFamily="@font/interregular"
            />
    <TextView
        android:id="@+id/dialog_delete_account"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_56dp"
        android:textSize="@dimen/dimen_16sp"
        android:text="@string/delete_account"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_google"
        android:fontFamily="@font/interregular"
        android:layout_marginTop="@dimen/dimen_18dp"
        />
    <TextView
        android:id="@+id/dialog_cancel"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_56dp"
        android:textSize="@dimen/dimen_16sp"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_delete_account"
        android:fontFamily="@font/interregular"
        android:layout_marginTop="@dimen/dimen_13dp"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>