<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/outside_view"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_88dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_about"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        android:background="@mipmap/bg_dialog_edit_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outside_view">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_18dp"
            android:fontFamily="@font/interbold"
            android:text="@string/private_album"
            android:textColor="@color/color_202323"
            android:textSize="@dimen/dimen_20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/dialog_close"
            android:layout_width="@dimen/dimen_44dp"
            android:layout_height="@dimen/dimen_44dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_6dp"
            android:padding="@dimen/dimen_10dp"
            android:src="@mipmap/icon_black_close"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/no_member_private_album"
            android:layout_width="wrap_content"
            android:layout_height="163dp"
            app:layout_constraintTop_toBottomOf="@+id/dialog_title"
            android:layout_marginTop="@dimen/dimen_27dp"
            android:src="@mipmap/icon_no_member_private_album"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/no_member_private_album_title"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/no_member_private_album"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="@dimen/dimen_50dp"
            android:layout_marginEnd="@dimen/dimen_50dp"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_20sp"
            android:fontFamily="@font/interbold"
            android:text="@string/no_member_dialog_title"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/no_member_private_album_title_one"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/no_member_private_album_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="@dimen/dimen_50dp"
            android:layout_marginEnd="@dimen/dimen_50dp"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:fontFamily="@font/interbold"
            android:text="@string/no_member_dialog_title_one"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/no_member_private_album_content_one"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/no_member_private_album_title_one"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:textColor="@color/black"
            android:fontFamily="@font/interregular"
            android:lineSpacingExtra="@dimen/dimen_2dp"
            android:textSize="@dimen/dimen_14sp"
            android:text="@string/no_member_dialog_content_one"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/no_member_private_album_title_two"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/no_member_private_album_content_one"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="@dimen/dimen_50dp"
            android:layout_marginEnd="@dimen/dimen_50dp"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:fontFamily="@font/interbold"
            android:text="@string/no_member_dialog_title_two"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/no_member_private_album_content_two"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/no_member_private_album_title_two"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:textColor="@color/black"
            android:fontFamily="@font/interregular"
            android:lineSpacingExtra="@dimen/dimen_2dp"
            android:textSize="@dimen/dimen_14sp"
            android:text="@string/no_member_dialog_content_two"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/no_member_private_album_tip"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/no_member_private_album_content_two"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_28dp"
            android:textColor="@color/color_9C9FA6"
            android:fontFamily="@font/interregular"
            android:textSize="@dimen/dimen_14sp"
            android:text="@string/no_member_dialog_tips"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/txt_own_private_album"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_52dp"
            android:layout_marginStart="@dimen/dimen_12dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_12dp"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:background="@drawable/shape_solid_yellow_radius_24"
            android:fontFamily="@font/intersemibold"
            android:gravity="center"
            android:orientation="horizontal"
            android:text="@string/own_private_album"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintTop_toBottomOf="@+id/no_member_private_album_tip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>