<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_top_half_solid_white_radius_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/dialog_albums"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_56dp"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:background="@color/white"
            android:fontFamily="@font/interregular"
            android:gravity="center"
            android:text="@string/albums"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:layout_marginTop="@dimen/dimen_5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dialog_camera"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_56dp"
            android:background="@color/white"
            android:fontFamily="@font/interregular"
            android:gravity="center"
            android:text="@string/camera"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_albums" />

        <View
            android:id="@+id/center_line"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_13dp"
            android:background="@color/color_EFF0F2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_camera" />

        <TextView
            android:id="@+id/dialog_cancel"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_56dp"
            android:background="@color/white"
            android:fontFamily="@font/interregular"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/center_line" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>